2001-11-09  Ryan Nunn  <triforce@merlin.net.au>
	* gumps/Newfile_gump.* : Added "File" field to Save game info display.
	  Fixed crash on delete.
	* audio/midi_drivers/win32_midiout.cc : Not much

2001-11-09  Ryan Nunn  <triforce@merlin.net.au>
	* actorio.cc, combat.cc, gameclk.cc, gumps/GameplayOptions_gump.cc :
	  Fixed up some bool warnings.
	* cheat_screen.cc : Can put spaces in names and added feedback after
	  setting polymorph.
	* gamewin.cc : Added "Saving Game" message.
	* gumps/Newfile_gump.* : General Improvements.
	* msvcstuff/*.* : Misc updated project settings
	* files/Flex.* : is_flex() methods.
	* Makefile.win32, Makefile.cygwin, gamewin.h, gamedat.cc, exult.cc
	  files/zip/*.* : Zipped savegame support. Zlib headers and library are
	  required to use it. HAVE_ZIP_SUPPORT needs to be defined. Config key
	  "config/disk/save_compression_level" is used to control save game 
	  compression. Valid values are 0 (normal flex saves), 1 (normal zip,
	  default) and 2 (zip with combined files).

2001-11-08  Ryan Nunn  <triforce@merlin.net.au>
	* bggame.cc : Fixed BG Endgame crash

2001-11-07  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/objs.cc: Rendering order again:  Added special case when
	objs. occupy same 3D space.  Fixes Penumbra plaque.

2001-11-06  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Drop ammo or throwing-weapon on ground if it misses.

2001-11-06  Dominik Reichardt <gigdr@tesionmail.de>
	* added docs/xml: updated faq.xml and docs.xml
	* Faq, Readme updated

2001-11-05  Jeff Freedman  <jeff@amy.nerble.net>

	* effects.cc,combat.cc: Handle boomerangs, magic axes correctly.
	* shapes/shapeinf.h: 'returns' flag added.

	* actors.cc,schedule.cc:  Tell schedule when weapons changed.

2001-11-05  Dominik Reichardt <gigdr@tesionmail.de>
	* docs/xml/docs.xml,faq.xml spell checked. Will update webpages when I add
	all the new options in the gameplay options (later this week).

2001-11-04  Jeff Freedman  <jeff@amy.nerble.net>
