@@ -1,0 +1,12 @@
+INCLUDES = $(SDL_CFLAGS) $(INCDIRS) $(WINDOWING_SYSTEM) \
+		$(DEBUG_FLAGS) $(CPPFLAGS)
+
+noinst_LTLIBRARIES = libminizip.la
+
+libminizip_la_SOURCES =	\
+	zip.c \
+	zip.h \
+	unzip.c \
+	unzip.h
+
+CLEANFILES = *~
