@@ -6,7 +6,13 @@
    Read unzip.h for more info
 */
 
+
+
 /* Added by Ryan Nunn */
+#ifdef HAVE_CONFIG_H
+#  include <config.h>
+#endif
+
 #ifdef HAVE_ZIP_SUPPORT
 
 #include <stdio.h>
